k8s/frontend-canary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name:  rollout-bluegreen-preview
  namespace: frontend-demo
  labels:
    app: rollout-bluegreen

spec:
  selector:
    app: rollout-bluegreen
  ports:
    - port: 80
      targetPort: 3000
