k8s/frontend-stable-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-demo-stable
  namespace: frontend-demo
  labels:
    app: frontend-demo

spec:
  selector:
    app: frontend-demo

  ports:
    - port: 80
      targetPort: 3000
